Changed to vavr Stream, Map, and HashMap